Changes #3 When I update a recipe I using a Loader to load an existing recipe data. But I still use AsyncTask to insert or update a recipe data.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
         <activity
             android:name=".ui.activity.RecipeActivity"
             android:label="@string/title_activity_recipe"
-            android:parentActivityName=".ui.activity.CategoryActivity" >
+            android:parentActivityName=".ui.activity.CategoryActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mlsdev.serhiy.mycookbook.ui.activity.CategoryActivity" />
